--- a/WebTests/ClientApp/src/app/profile/profile.component.html
+++ b/WebTests/ClientApp/src/app/profile/profile.component.html
@@ -3,7 +3,7 @@
   <div class="max-w-xl mx-auto bg-white shadow-lg border border-gray-200 rounded-2xl p-8">
 
     <h1 class="text-3xl font-bold text-gray-900 mb-6">
-      Профиль {{ username }}!
+      Профиль {{ username }}
     </h1>
 
     <div class="space-y-4 text-gray-700 mb-8">
@@ -30,18 +30,18 @@
       </button>
 
     </div>
-
-    <h2>История прохождения тестов</h2>
-    <div *ngIf="history">
+    
+    <div *ngIf="history.length > 0">
+      <h2>История прохождения тестов</h2>
       <ul>
         <li *ngFor="let try of history">
           <p>{{ try.test.title }} - {{ try.finishedAt | date:'dd.MM.yyyy HH:mm:ss' }} - {{ try.score }} - {{ try.isFinished }}</p>
         </li>
       </ul>
     </div>
-
-    <h2>Созданные тесты</h2>
-    <div *ngIf="created_tests">
+    
+    <div *ngIf="created_tests.length > 0">
+      <h2>Созданные тесты</h2>
       <ul>
         <li *ngFor="let test of created_tests">
           <p>{{ test.title }} - {{ test.createdDate | date:'dd.MM.yyyy HH:mm:ss' }} - {{ test.published }}</p>
