--- a/WebTests/ClientApp/src/app/tests/tests/tests.component.html
+++ b/WebTests/ClientApp/src/app/tests/tests/tests.component.html
@@ -97,7 +97,7 @@
 
 
 <ng-template #no_questions>
-  <h3 class="text-center text-xl text-gray-500 py-10">В данном тесте нет вопросов</h3>
+  <h3 class="text-center text-xl text-gray-500 py-10">Тест не найден</h3>
 </ng-template>
 
 
