--- a/WebTests/ClientApp/src/app/management/management-edit/management-edit/management-edit.component.html
+++ b/WebTests/ClientApp/src/app/management/management-edit/management-edit/management-edit.component.html
@@ -148,6 +148,11 @@
     </button>
   </div>
 
+  <!-- Ссылка на прохождение теста -->
+  <div *ngIf="edited_test.questions.length > 2 && edited_test.title != ''" class="mt-8">
+    <a [routerLink]="['/tests', edited_test.id]">Пройти демо</a>
+  </div>
+
   <!-- Ошибка -->
   <div *ngIf="text_error"
        class="mb-6 p-4 rounded-lg border-l-4 border-red-600 bg-red-50 text-red-800 text-lg font-semibold shadow-sm">
