--- a/WebTests/ClientApp/src/app/management/management-create/management-create.component.html
+++ b/WebTests/ClientApp/src/app/management/management-create/management-create.component.html
@@ -1,4 +1,4 @@
-<div class="mx-auto max-w-4xl p-6">
+<div class="mx-auto max-w-4xl p-6 pt-20">
 
   <h2 class="text-3xl font-bold mb-6">Создание теста</h2>
 
