--- a/WebTests/ClientApp/src/app/auth/register/register.component.html
+++ b/WebTests/ClientApp/src/app/auth/register/register.component.html
@@ -1,4 +1,4 @@
-<div class="flex items-center justify-center px-6 pb-4">
+<div class="flex items-center justify-center pt-20 px-6 pb-4">
 
   <div class="w-full max-w-md bg-white shadow-lg border border-gray-200 rounded-2xl p-8">
 
