--- a/WebTests/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/WebTests/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,4 +1,4 @@
-<header class="shadow mb-4">
+<header class="fixed top-0 left-0 right-0 shadow">
   <nav class="bg-white border-b">
     <div class="container mx-auto px-10 flex items-center justify-between h-16">
 
