--- a/WebTests/ClientApp/src/app/profile/profile.component.html
+++ b/WebTests/ClientApp/src/app/profile/profile.component.html
@@ -1,54 +1,63 @@
-<div class="pt-10 px-6">
+<div class="pt-20 px-6">
 
-  <div class="max-w-xl mx-auto bg-white shadow-lg border border-gray-200 rounded-2xl p-8">
-
-    <h1 class="text-3xl font-bold text-gray-900 mb-6">
-      Профиль {{ username }}
-    </h1>
-
-    <div class="space-y-4 text-gray-700 mb-8">
-      <p class="text-lg">
-        Добро пожаловать в личный кабинет!
-        Здесь вы можете управлять своими тестами и настройками аккаунта.
-      </p>
+  <div class="flex max-w-5xl mx-auto bg-gray-200 border border-gray-400 rounded-3xl p-5 m-5 mt-0">
+    <div class="w-[70px] h-[70px] bg-white rounded-full mr-5 border-2 border-gray-200"></div>
+    <div>
+      <h1 class="text-3xl font-bold text-gray-900">
+        {{ username }}
+      </h1>
+      <p class="mt-2 text-gray-700">Статус пользователя</p>
     </div>
-
-
-    <div class="flex flex-col gap-4">
-
-      <!-- Ссылка на тесты -->
-      <a [routerLink]="['/my-tests']"
-         class="text-center py-3 rounded-xl border border-indigo-500 text-indigo-600 font-medium hover:bg-indigo-500 hover:text-white transition-colors duration-300">
-        Ваши тесты
-      </a>
-
-      <!-- Logout -->
-      <button *ngIf="authService.isAuthenticated"
-              (click)="onLogout()"
-              class="py-3 rounded-xl bg-red-500 hover:bg-red-600 text-white font-medium transition-colors duration-300">
-        Выйти
-      </button>
-
-    </div>
-    
-    <div *ngIf="history.length > 0">
-      <h2>История прохождения тестов</h2>
-      <ul>
-        <li *ngFor="let try of history">
-          <p>{{ try.test.title }} - {{ try.finishedAt | date:'dd.MM.yyyy HH:mm:ss' }} - {{ try.score }} - {{ try.isFinished }}</p>
-        </li>
-      </ul>
-    </div>
-    
-    <div *ngIf="created_tests.length > 0">
-      <h2>Созданные тесты</h2>
-      <ul>
-        <li *ngFor="let test of created_tests">
-          <p>{{ test.title }} - {{ test.createdDate | date:'dd.MM.yyyy HH:mm:ss' }} - {{ test.published }}</p>
-        </li>
-      </ul>
-    </div>
-
   </div>
-  
+
+  <div class="max-w-3xl mx-auto bg-gray-100 border border-gray-400 rounded-3xl p-5 m-5 mt-0">
+    <div class="flex justify-between px-2 pb-4">
+      <p class="text-2xl ">Созданные тесты</p>
+      <a *ngIf="created_tests.length > 0" [routerLink]="['/my-tests']"
+         class="text-center rounded-xl py-[5px] px-4 border border-indigo-500 text-indigo-600 font-medium hover:bg-indigo-500 hover:text-white transition-colors duration-300">Подробнее</a>
+    </div>
+    <div *ngIf="created_tests.length > 0;else no_tests">
+      <table class="justify-center w-full table-fixed">
+        <tbody>
+          <tr *ngFor="let test of created_tests" class="hover:bg-gray-300 transition-colors">
+            <td class="border-b-2 border-gray-300 p-2 w-1/2">{{ test.title }}</td>
+            <td class="border-b-2 border-gray-300 p-2 w-1/4 text-right">{{ test.createdDate | date:'d MMM yyyy' }}</td>
+            <td class="border-b-2 border-gray-300 p-2 text-right"><a [routerLink]="['/management/edit', test.id]">Открыть</a></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+  <div class="max-w-3xl mx-auto bg-gray-100 border border-gray-400 rounded-3xl p-5 m-5 mt-0">
+    <div class="flex justify-between px-2 pb-4">
+      <p class="text-2xl ">История прохождения тестов</p>
+      <a *ngIf="created_tests.length > 0"
+         class="text-center rounded-xl py-[5px] px-4 border border-indigo-500 text-indigo-600 font-medium hover:bg-indigo-500 hover:text-white transition-colors duration-300">Подробнее</a>
+    </div>
+    <div *ngIf="history.length > 0;else no_tests">
+      <table class="justify-center w-full table-fixed">
+        <tbody>
+          <tr *ngFor="let try of history" class="hover:bg-gray-300 transition-colors" [class]="try.isFinished ? 'text-green-500' : 'text-red-500'">
+            <td class="border-b-2 border-gray-300 p-2 w-1/2">{{ try.test.title }}</td>
+            <td class="border-b-2 border-gray-300 p-2 w-1/4 text-right">{{ try.finishedAt | date:'d MMM yyyy HH:mm' }}</td>
+            <td class="border-b-2 border-gray-300 p-2 text-right">{{ try.score }}/{{ try.test.questions.length }}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+  <div class="flex justify-center max-w-3xl mx-auto p-5 pt-0">
+    <button *ngIf="authService.isAuthenticated"
+            (click)="onLogout()"
+            class="py-4 px-10 rounded-xl bg-red-500 hover:bg-red-600 text-white font-medium transition-colors duration-300">
+      Выйти
+    </button>
+  </div>
+
 </div>
+
+<ng-template #no_tests>
+  <p class="text-center">Пусто</p>
+</ng-template>
