--- a/WebTests/ClientApp/src/app/tests/my-tests/my-tests.component.html
+++ b/WebTests/ClientApp/src/app/tests/my-tests/my-tests.component.html
@@ -1,4 +1,4 @@
-<div class="max-w-5xl mx-auto px-6 py-4">
+<div class="max-w-5xl mx-auto px-6 py-4 pt-20">
 
   <h2 class="text-2xl font-bold mb-8">Ваши тесты</h2>
 
