--- a/WebTests/ClientApp/src/app/tests/tests-list/tests-list.component.html
+++ b/WebTests/ClientApp/src/app/tests/tests-list/tests-list.component.html
@@ -1,4 +1,4 @@
-<div class="max-w-5xl mx-auto px-6 py-4">
+<div class="max-w-5xl mx-auto px-6 pt-24">
 
   <h2 class="text-2xl font-bold mb-4">Доступные тесты</h2>
 
