--- a/WebTests/ClientApp/src/app/tests/tests/tests.component.html
+++ b/WebTests/ClientApp/src/app/tests/tests/tests.component.html
@@ -1,5 +1,5 @@
-<div *ngIf="!isUnauth;else no_questions">
-  <div *ngIf="currentQuestion;else no_questions" class="max-w-3xl mx-auto px-6 py-8">
+<div *ngIf="!isUnauth;else no_auth">
+  <div *ngIf="currentQuestion;else no_questions" class="max-w-3xl mx-auto px-6 py-8 pt-24">
 
     <h3 class="text-2xl font-bold mb-6">
       {{ currentQuestion.text }}
@@ -101,6 +101,10 @@
   <h3 class="text-center text-xl text-gray-500 py-10">Тест не найден</h3>
 </ng-template>
 
+
+<ng-template #no_auth>
+  <h3 class="text-center text-xl text-gray-500 py-10">Тест не найден</h3>
+</ng-template>
 
 <div *ngIf="this.mode.showAfterEach && isModalOpen"
      class="fixed inset-0 bg-black bg-opacity-40 flex justify-center items-start pt-40 z-50">
