--- a/WebTests/ClientApp/src/app/management/management-edit/management-edit/management-edit.component.html
+++ b/WebTests/ClientApp/src/app/management/management-edit/management-edit/management-edit.component.html
@@ -154,6 +154,18 @@
        class="px-6 py-3 bg-white border-green-600 text-black rounded-lg hover:bg-green-700 hover:text-white transition">Пройти демо</a>
   </div>
 
+
+  <!-- Кнопка удаления теста -->
+  <div class="mt-8">
+    <button type="button"
+            [disabled]="is_editing_locked"
+            (click)="deleteTest()"
+            class="px-6 py-3 bg-red-600 text-white rounded-lg hover:bg-red-700 shadow">
+      Удалить тест
+    </button>
+  </div>
+
+
   <!-- Ошибка -->
   <div *ngIf="text_error"
        class="mb-6 p-4 rounded-lg border-l-4 border-red-600 bg-red-50 text-red-800 text-lg font-semibold shadow-sm">
@@ -187,6 +199,41 @@
   </div>
 </div>
 
+
 <ng-template #no_test>
   <h3 class="text-center text-xl text-gray-500 py-10">Тест не найден</h3>
 </ng-template>
+
+<!--Модальное окно подтверждения удаления теста-->
+<div *ngIf="isModalDeleting"
+     class="fixed inset-0 bg-black bg-opacity-40 flex justify-center items-start pt-20 z-50">
+
+  <div class="bg-white p-6 rounded-xl shadow-xl w-80">
+
+    <p class="mb-4 text-lg text-center">Подтвердите удаления теста "{{ test_title }}", <b>восстановить будет невозможно</b></p>
+
+    <button (click)="confirmDelete()"
+            class="block w-full px-4 py-2 bg-red-600 text-white rounded-lg hover:bg-red-700 transition">
+      Подтвердить
+    </button>
+    <button (click)="closeModal()"
+            class="block w-full px-4 py-2 bg-gray-200 rounded-lg hover:bg-gray-300">
+      Отмена
+    </button>
+  </div>
+</div>
+
+<!--Модальное окно информирующее об удалении теста-->
+<div *ngIf="isDeleted"
+     class="fixed inset-0 bg-black bg-opacity-40 flex justify-center items-start pt-20 z-50">
+
+  <div class="bg-white p-6 rounded-xl shadow-xl w-80">
+
+    <p class="mb-4 text-lg text-center">Тест успешно удален</p>
+
+    <button (click)="closeInfoModal()"
+            class="block w-full px-4 py-2 bg-green-600 text-white rounded-lg hover:bg-green-700 transition">
+      Ок
+    </button>
+  </div>
+</div>
