--- a/WebTests/ClientApp/src/app/management/management-edit/management-edit/management-edit.component.html
+++ b/WebTests/ClientApp/src/app/management/management-edit/management-edit/management-edit.component.html
@@ -201,7 +201,7 @@
 
 
 <ng-template #no_test>
-  <h3 class="text-center text-xl text-gray-500 py-10">Тест не найден</h3>
+  <h3 class="text-center text-xl text-gray-500 py-[100px]">Тест не найден</h3>
 </ng-template>
 
 <!--Модальное окно подтверждения удаления теста-->
